Media element time displays shouldn't wrap. https://bugs.webkit.org/show_bug.cgi?id=143854. <rdar://problem/20284766>
Reviewed by Brent Fulgham.

* Modules/mediacontrols/mediaControlsApple.css:
(::-webkit-media-controls): Don't wrap any text.
(audio::-webkit-media-controls-time-remaining-display): Also increase remaining time display width by 1.
(audio::-webkit-media-controls-time-remaining-display.five-digit-time): Ditto.
(audio::-webkit-media-controls-time-remaining-display.six-digit-time): Ditto.

Canonical link: https://commits.webkit.org/161862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182924 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/Modules/mediacontrols/mediaControlsApple.css
+++ b/Source/WebCore/Modules/mediacontrols/mediaControlsApple.css
@@ -57,6 +57,7 @@ video:-webkit-full-page-media::-webkit-media-controls-panel.no-video {
     -webkit-justify-content: flex-end;
     -webkit-flex-direction: column;
     font: -webkit-small-control;
+    white-space: nowrap;
     -webkit-font-smoothing: subpixel-antialiased;
 }
 
@@ -485,6 +486,7 @@ audio::-webkit-media-controls-time-remaining-display {
     position: relative;
     bottom: 0.5px;
     font-family: -apple-system-font-monospaced-numbers;
+    -webkit-text-size-adjust:none;
     mix-blend-mode: plus-lighter;
 }
 
@@ -500,13 +502,13 @@ video::-webkit-media-controls-time-remaining-display,
 audio::-webkit-media-controls-time-remaining-display {
     margin-left: 8px;
     margin-right: 16px;
-    width: 36px;
-    min-width: 36px;
+    width: 37px;
+    min-width: 37px;
 }
 
 video::-webkit-media-controls-time-remaining-display.five-digit-time,
 audio::-webkit-media-controls-time-remaining-display.five-digit-time {
-    min-width: 46px;
+    min-width: 47px;
 }
 
 video::-webkit-media-controls-current-time-display.five-digit-time,
@@ -516,7 +518,7 @@ audio::-webkit-media-controls-current-time-display.five-digit-time {
 
 video::-webkit-media-controls-time-remaining-display.six-digit-time,
 audio::-webkit-media-controls-time-remaining-display.six-digit-time {
-    min-width: 53px;
+    min-width: 54px;
 }
 
 video::-webkit-media-controls-current-time-display.six-digit-time,
